--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,7 +26,7 @@ jobs:
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
     - name: Build Docker image
-      run: docker build -t your-dockerhub-username/product-catalogue:v1.0.0 .
+      run: docker build -t your-dockerhub-username/product-catalogue:v1.0.0 ./microservice
 
     - name: Push Docker image
       run: docker push your-dockerhub-username/product-catalogue:v1.0.0
