--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,16 +1,16 @@
-
 name: CI-CD Pipeline
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
+    - name: Set up job
       uses: actions/checkout@v2
 
     - name: Set up JDK 17
@@ -30,11 +30,3 @@ jobs:
 
     - name: Push Docker image
       run: docker push advaith65/product-catalogue:v1.0.0
-
-    - name: Apply Kubernetes manifests
-      run: |
-        kubectl apply --validate=false -f kubernetes/namespace-v1.yaml
-        kubectl apply --validate=false -f kubernetes/deployment-v1.yaml
-        kubectl apply --validate=false -f kubernetes/service-v1.yaml
-        kubectl apply --validate=false -f kubernetes/hpa-v1.yaml
-        kubectl apply --validate=false -f kubernetes/ingress.yaml
